@@ -335,4 +335,7 @@ version 5.0-alpha4 (2015-09-29)
 
 version 5.0-alpha5 (2015-09-30)
     * Adds generic framework for client authentication verification.
+    * Removes Apache Commons Codec dependency, switches to Nimbus JOSE+JWT
+      for BASE64 and BASE64 URL-safe encoding and decoding.
+
 
